tests/invalid_typecheck/test_tc_index_non_array.aphi
int X;
int I;

procedure main {
    I = 0;
    X[I] = 5;
}
